--- a/Investigate_a_Dataset.ipynb
+++ b/Investigate_a_Dataset.ipynb
@@ -2201,6 +2201,10 @@
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "from subprocess import call\n",
+    "call(['python', '-m', 'nbconvert', 'Investigate_a_Dataset.ipynb'])"
+   ]
   }
  ],
  "metadata": {
